--- a/templates/shop/shared/layout/base/styles.html.twig
+++ b/templates/shop/shared/layout/base/styles.html.twig
@@ -1,1 +1,3 @@
-{{ encore_entry_link_tags('plugin-shop-entry', null, 'app.shop') }}
+{% if encore_entry_exists('plugin-shop-entry', 'app.shop') %}
+    {{ encore_entry_link_tags('plugin-shop-entry', null, 'app.shop') }}
+{% endif %}
