--- a/templates/admin/slider/form/sections/general/settings.html.twig
+++ b/templates/admin/slider/form/sections/general/settings.html.twig
@@ -1,5 +1,4 @@
 {% set form = hookable_metadata.context.form.settings %}
-{% set yellowSwatches = ['rgba(250, 204, 21, 1)', 'rgba(250, 204, 21, 0.75)', 'rgba(250, 204, 21, 0.45)', 'rgba(255, 255, 255, 1)', 'rgba(17, 24, 39, 0.85)'] %}
 
 <div class="col-12">
     <div class="card mt-3 mb-0">
@@ -18,11 +17,13 @@
                                 <div class="col-12 col-md-4">{{ form_row(form.containerWidth) }}</div>
                                 <div class="col-12 col-md-4">{{ form_row(form.slideEffect) }}</div>
                                 <div class="col-12 col-md-4">{{ form_row(form.speed) }}</div>
+                                <div class="col-12 col-md-4">{{ form_row(form.maxHeight) }}</div>
                                 <div class="col-12 col-md-4">{{ form_row(form.overlay) }}</div>
                                 <div class="col-12 col-md-4">{{ form_row(form.showTitle) }}</div>
                                 <div class="col-12 col-md-4">{{ form_row(form.justifySlideHeight) }}</div>
                                 <div class="col-12 col-md-4">{{ form_row(form.rewind) }}</div>
                                 <div class="col-12 col-md-4">{{ form_row(form.pauseOnHover) }}</div>
+                                <div class="col-12 col-md-4">{{ form_row(form.parallax.strength) }}</div>
                             </div>
                         </div>
                     </div>
@@ -58,8 +59,8 @@
                                 <div class="col-12 col-md-6">{{ form_row(form.navigationIcon) }}</div>
                                 <div class="col-12 col-md-6">{{ form_row(form.navigationSize) }}</div>
                                 <div class="col-12 col-md-6">{{ form_row(form.navigationShadow) }}</div>
-                                <div class="col-12">{% include '@VanssaSyliusSliderPlugin/admin/shared/form/rgba_color_field.html.twig' with { field: form.navigationColor, swatches: yellowSwatches } only %}</div>
-                                <div class="col-12">{% include '@VanssaSyliusSliderPlugin/admin/shared/form/rgba_color_field.html.twig' with { field: form.navigationBackgroundColor, swatches: yellowSwatches } only %}</div>
+                                <div class="col-12">{{ form_row(form.navigationColor) }}</div>
+                                <div class="col-12">{{ form_row(form.navigationBackgroundColor) }}</div>
                             </div>
                         </div>
                     </div>
@@ -74,8 +75,8 @@
                                 <div class="col-12 col-md-6">{{ form_row(form.paginationShape) }}</div>
                                 <div class="col-12 col-md-6">{{ form_row(form.paginationSize) }}</div>
                                 <div class="col-12 col-md-6">{{ form_row(form.paginationShadow) }}</div>
-                                <div class="col-12">{% include '@VanssaSyliusSliderPlugin/admin/shared/form/rgba_color_field.html.twig' with { field: form.paginationColor, swatches: yellowSwatches } only %}</div>
-                                <div class="col-12">{% include '@VanssaSyliusSliderPlugin/admin/shared/form/rgba_color_field.html.twig' with { field: form.paginationActiveColor, swatches: yellowSwatches } only %}</div>
+                                <div class="col-12">{{ form_row(form.paginationColor) }}</div>
+                                <div class="col-12">{{ form_row(form.paginationActiveColor) }}</div>
                             </div>
                         </div>
                     </div>
