--- a/templates/admin/slide/form/sections/options.html.twig
+++ b/templates/admin/slide/form/sections/options.html.twig
@@ -1,6 +1,4 @@
 {% set form = hookable_metadata.context.form %}
-{% set textSwatches = ['rgba(255, 255, 255, 1)', 'rgba(255, 255, 255, 0.92)', 'rgba(245, 245, 245, 1)', 'rgba(230, 230, 230, 1)'] %}
-{% set colorSwatches = ['rgba(0, 0, 0, 0)', 'rgba(15, 23, 42, 0.75)', 'rgba(17, 24, 39, 0.9)', 'rgba(31, 41, 55, 0.85)', 'rgba(59, 130, 246, 0.85)', 'rgba(244, 114, 182, 0.85)', 'rgba(16, 185, 129, 0.85)', 'rgba(245, 158, 11, 0.85)'] %}
 
 <div class="tab-pane {% if hookable_metadata.configuration.active|default(false) %}show active{% endif %}" id="slide-options" role="tabpanel" tabindex="0" {{ stimulus_controller('vanssa-slide-preview') }}>
     <div class="card mb-3">
@@ -11,61 +9,23 @@
             <div class="accordion" id="slide-options-accordion">
                 <div class="accordion-item">
                     <h3 class="accordion-header">
-                        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#slide-options-content">
-                            {{ 'sylius.ui.content'|trans }}
+                        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#slide-options-responsive">
+                            <i class="bi bi-laptop me-1"></i> Responsive
                         </button>
-                </h3>
-                <div id="slide-options-content" class="accordion-collapse collapse show" data-bs-parent="#slide-options-accordion">
-                    <div class="accordion-body">
-                        <div class="card mb-3">
-                            <div class="card-header"><h4 class="card-title mb-0">Title</h4></div>
-                            <div class="card-body row">
-                                <div class="col-12 col-md-6">{{ form_row(form.settings.headlineElement, { attr: {'data-preview-field': 'headlineElement'} }) }}</div>
-                                <div class="col-12 col-md-6">{% include '@VanssaSyliusSliderPlugin/admin/shared/form/rgba_color_field.html.twig' with { field: form.settings.headlineColor, swatches: colorSwatches, input_attr: {'data-preview-field': 'headlineColor'} } only %}</div>
+                    </h3>
+                    <div id="slide-options-responsive" class="accordion-collapse collapse show" data-bs-parent="#slide-options-accordion">
+                        <div class="accordion-body">
+                            {% include '@VanssaSyliusSliderPlugin/admin/slide/form/sections/_responsive_settings.html.twig' with {
+                                responsive_form: form.settings.responsive,
+                                responsive_id: 'slide-options-responsive-settings'
+                            } %}
+
+                            <div class="row mt-3">
+                                <div class="col-12">{% include '@VanssaSyliusSliderPlugin/admin/shared/form/slide_preview.html.twig' %}</div>
                             </div>
-                        </div>
-                        <div class="card mb-3">
-                            <div class="card-header"><h4 class="card-title mb-0">Content</h4></div>
-                            <div class="card-body row">
-                                <div class="col-12 col-md-4">{{ form_row(form.settings.contentHorizontalPosition, { attr: {'data-preview-field': 'contentHorizontalPosition'} }) }}</div>
-                                <div class="col-12 col-md-4">{{ form_row(form.settings.contentVerticalPosition, { attr: {'data-preview-field': 'contentVerticalPosition'} }) }}</div>
-                                <div class="col-12 col-md-4">{{ form_row(form.settings.contentTextAlign, { attr: {'data-preview-field': 'contentTextAlign'} }) }}</div>
-                                <div class="col-12 col-md-6">{{ form_row(form.settings.contentPadding, { attr: {'data-preview-field': 'contentPadding'} }) }}</div>
-                                <div class="col-12 col-md-6">{{ form_row(form.settings.contentMargin, { attr: {'data-preview-field': 'contentMargin'} }) }}</div>
-                                <div class="col-12 col-md-4">{% include '@VanssaSyliusSliderPlugin/admin/shared/form/rgba_color_field.html.twig' with { field: form.settings.textColor, swatches: textSwatches, input_attr: {'data-preview-field': 'textColor'} } only %}</div>
-                                <div class="col-12 col-md-4">{% include '@VanssaSyliusSliderPlugin/admin/shared/form/rgba_color_field.html.twig' with { field: form.settings.descriptionColor, swatches: colorSwatches, input_attr: {'data-preview-field': 'descriptionColor'} } only %}</div>
-                                <div class="col-12 col-md-4">{% include '@VanssaSyliusSliderPlugin/admin/shared/form/rgba_color_field.html.twig' with { field: form.settings.backgroundColor, swatches: colorSwatches, input_attr: {'data-preview-field': 'backgroundColor'} } only %}</div>
-                            </div>
-                        </div>
-                        <div class="card mb-3">
-                            <div class="card-header"><h4 class="card-title mb-0">Effects</h4></div>
-                            <div class="card-body row">
-                                <div class="col-12 col-md-4">{{ form_row(form.settings.contentAnimation) }}</div>
-                                <div class="col-12 col-md-4">{{ form_row(form.settings.animationDuration) }}</div>
-                                <div class="col-12 col-md-4">{{ form_row(form.settings.animationDelay) }}</div>
-                                <div class="col-12 col-md-4">{{ form_row(form.settings.enableTextBlur, { attr: {'data-preview-field': 'enableTextBlur'} }) }}</div>
-                                <div class="col-12 col-md-4">{{ form_row(form.settings.contentBlurStrength, { attr: {'data-preview-field': 'contentBlurStrength'} }) }}</div>
-                                <div class="col-12 col-md-4">{{ form_row(form.settings.backgroundBlurPreset, { attr: {'data-preview-field': 'backgroundBlurPreset'} }) }}</div>
-                                <div class="col-12 col-md-4">{{ form_row(form.settings.borderRadius, { attr: {'data-preview-field': 'borderRadius'} }) }}</div>
-                                <div class="col-12 col-md-8">{{ form_row(form.settings.customCssClass) }}</div>
-                            </div>
-                        </div>
-                        <div class="card mb-3">
-                            <div class="card-header"><h4 class="card-title mb-0">Media</h4></div>
-                            <div class="card-body row">
-                                <div class="col-12 col-md-6">{% include '@VanssaSyliusSliderPlugin/admin/shared/form/rgba_color_field.html.twig' with { field: form.settings.mediaOverlayColor, swatches: colorSwatches } only %}</div>
-                                <div class="col-12 col-md-6">{{ form_row(form.content.slideCover.alt) }}</div>
-                                <div class="col-12 col-md-6">{{ form_row(form.content.slideCover.title) }}</div>
-                                <div class="col-12 col-md-6">{{ form_row(form.content.slideCoverAlt) }}</div>
-                                <div class="col-12 col-md-6">{{ form_row(form.content.slideCoverTitle) }}</div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-12">{% include '@VanssaSyliusSliderPlugin/admin/shared/form/slide_preview.html.twig' %}</div>
                         </div>
                     </div>
                 </div>
-            </div>
                 <div class="accordion-item">
                     <h3 class="accordion-header">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#slide-options-linking">
