--- a/templates/admin/slider/form/sections.html.twig
+++ b/templates/admin/slider/form/sections.html.twig
@@ -1,5 +1,3 @@
-<div class="col-12 col-lg-9">
-    <div class="tab-content">
-        {% hook 'sections' %}
-    </div>
+<div class="col-12">
+    {% hook 'sections' %}
 </div>
